# MyMapMap

./: .gitignore  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  INSTALL.md  OSC  README.md  TODO  appveyor.yml  build_msvc2022.bat  build_ubuntu.sh  deploy_msvc2022.bat  gen_sln.bat  mapmap.pro  mapmap.vcxproj  mapmap.vcxproj.filters  mymapmap.pro  mymapmap.sln  test_sln_build.bat
.claude/: fork-rules.md  settings.json
.claude/skills/: mapmap-mcp.md
.claude/skills/run/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: macos-build.yml  qt-linux.yml  qt-macos.yml  qt-windows.yml  release.yml  ubuntu-build.yml  windows-build.yml
docs/: index.dox
docs/informations/: CONTRIBUTORS.html  CONTRIBUTORS.md  mcp.md
examples/: MyDemo.mmp  README.md  demo.mmp
installer/: mymapmap.iss
resources/: interface.qrc  windows_resource.rc
resources/linux/: mymapmap.desktop
resources/macOS/: Info.plist
resources/qss/: mapmap.qss
scripts/: build.sh  run.sh  sh_build_macos.sh  sh_clean.sh  sh_install_deps_macos.sh  sh_make_appimage.sh
src/: src.pri
src/app/: MainApplication.cpp  MainApplication.h  main.cpp
src/control/: FppClient.cpp  FppClient.h  FppMultiSyncListener.cpp  FppMultiSyncListener.h  McpServer.cpp  McpServer.h  OscInterface.cpp  OscInterface.h  control.pri
src/control/qosc/: oscreceiver.cpp  oscsender.cpp  qosc_global.h
src/core/: CameraImpl.cpp  CameraImpl.h  CameraSurface.cpp  CameraSurface.h  Commands.cpp  Commands.h  Element.cpp  Element.h  Layer.cpp  Layer.h  MM.cpp  MM.h  Mapping.cpp  Mapping.h  MappingManager.cpp  MappingManager.h  MetaObjectRegistry.h  Paint.cpp  Paint.h  ProjectLabels.cpp  ProjectLabels.h  ProjectReader.cpp  ProjectReader.h  ProjectWriter.cpp  ProjectWriter.h  Serializable.cpp  Serializable.h  Source.cpp  Source.h  Syphon.h  SyphonImpl.mm  ThumbnailCache.cpp  ThumbnailCache.h  Util.cpp  Util.h  VideoFrameConverter.cpp  VideoFrameConverter.h  VideoImpl.cpp  VideoImpl.h  VideoPlayerImpl.cpp  (+2 more)
src/gui/: AboutDialog.cpp  AboutDialog.h  ConsoleWindow.cpp  FppConnectDialog.cpp  FppConnectDialog.h  LayerGui.cpp  LayerGui.h  LayerItemDelegate.cpp  LayerItemDelegate.h  LayerListModel.cpp  LayerListModel.h  MainWindow.cpp  MainWindow.h  MapperGLCanvas.cpp  MapperGLCanvas.h  MapperGLCanvasToolbar.cpp  MapperGLCanvasToolbar.h  MappingGui.cpp  MappingListModel.cpp  OutputGLCanvas.cpp  OutputGLCanvas.h  OutputGLWindow.cpp  OutputGLWindow.h  PreferenceDialog.cpp  PreferenceDialog.h  ShapeGraphicsItem.cpp  ShapeGraphicsItem.h  ShortcutWindow.cpp  ShortcutWindow.h  SourceGui.cpp  SourceGui.h  SyphonServerDialog.cpp  SyphonServerDialog.h  VideoExporter.cpp  VideoExporter.h  gui.pri
src/gui/contrib/qtpropertybrowser-extension/: fileedit.cpp  fileedit.h
src/gui/contrib/qtpropertybrowser/src/: qteditorfactory.cpp  qtpropertymanager.cpp  qttreepropertybrowser.cpp  qtvariantproperty.cpp
src/shape/: FreePolygon.h  Mesh.cpp  Polygon.cpp  Shape.cpp  Shape.h  Shapes.h  shape.pri
tests/: TestMaths.cpp  TestMaths.h  TestShape.cpp  TestShape.h  TestUidAllocator.cpp  TestUidAllocator.h  TestUtil.cpp  TestUtil.h  main.cpp  tests.pro
